<resources>
    <string name="app_name">SIT305ass2</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="credits">Legal \n‘e_dragon_minion’, ‘e_dragon_minion2’, ‘e_dragon_minion3’, ‘eb_drgon_boss’
        by Stephen “Redshrike” Challener available at: https://opengameart.org/content/rpg-enemies-11-dragons
        under Creative Commons CC BY 3.0. \nCredit to: Stephen "Redshrike" Challener, MrBeast, Surt, Blarumyrran,
        Sharm, Zabin \n ‘eb_demon_boss’, ‘eb_mage_boss’, ‘eb_medua_boss’, ‘eb_troll_boss’ by Redshrike available at:
        https://opengameart.org/content/6-more-rpg-enemies under Creative Commons CC BY 3.0 \nCredit to: Stephen
        Challener (Redshrike, Blarumyrran and LordNeo, hosted by OpenGameArt.org \n ‘e_eye’, ’e_skeleton’, ‘e_spider’,
        ‘e_troll’ by Redshrike available at: https://opengameart.org/content/10-basic-rpg-enemies under Creative
        Commons CC BY 3.0 \nCredit to: Stephen "Redshrike" Challener, hosted by OpenGameArt.org \n
        ‘e_rat_minion’, ‘e_rat_minion2’, ‘eb_rat_boss’ by MrBeast and Redshrike available at: https://opengameart.org/content/rat-men-rpg-enemies
        under Creative Commons CC BY 3.0 \nCredit to: MrBeast and Redshrike</string>
    <string name="equip">Equip</string>
    <string name="equipped">Equipped</string>
    <string name="henry_the_villager">Henry the Villager</string>
    <string name="shop">Shop</string>
    <string name="caves">Caves</string>
    <string name="quit">Quit</string>
    <string name="talk_to_henry">Talk to Henry</string>
    <string name="full_heal_20_gold">Full heal (20 gold)</string>
    <string name="buy_potion_15_gold">Buy potion (15 gold)</string>
    <string name="player_stats">PLAYER STATS</string>
    <string name="player_image">Player Image</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="forward">Forward</string>
    <string name="exit">Exit</string>
    <string name="attack">Attack</string>
    <string name="heal">Heal</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="level_4">Level 4</string>
    <string name="level_5">Level 5</string>
    <string name="level_6">Level 6</string>
    <string name="new_game">New Game</string>
    <string name="continue1">Continue</string>
    <string name="about">About</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="created_by_alex_ruth">CREATED BY ALEX RUTH</string>
</resources>
