<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sizeTest1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFF1C5"
    android:orientation="vertical"
    tools:context="com.example.alexuni.sit305ass2.LevelsActivity">


    <TableLayout
        android:id="@+id/sizeTest"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:background="#EFF1C5">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_weight="1">

            <Button
                android:id="@+id/lvlBtn1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="lvlHandler"
                android:text="@string/level_1"
                android:visibility="visible" />

            <Button
                android:id="@+id/lvlBtn2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="lvlHandler"
                android:text="@string/level_2"
                android:visibility="visible" />

            <Button
                android:id="@+id/lvlBtn3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="lvlHandler"
                android:text="@string/level_3"
                android:visibility="visible" />


        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/lvlBtn4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="lvlHandler"
                android:text="@string/level_4"
                android:visibility="visible" />

            <Button
                android:id="@+id/lvlBtn5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="lvlHandler"
                android:text="@string/level_5"
                android:visibility="visible" />

            <Button
                android:id="@+id/lvlBtn6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="lvlHandler"
                android:text="@string/level_6"
                android:visibility="visible" />

        </TableRow>

    </TableLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.45">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/textborders"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameJSON"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                android:layout_weight="5"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textJSON"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:layout_weight="3"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/nextBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="5"
                android:text="@string/next" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:background="#A2A77F">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:onClick="onBack"
            android:text="@string/back" />

    </RelativeLayout>
</LinearLayout>